<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="40dp"
    android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/photo"
            android:padding="8dp"
            tools:context=".activities.Login">
            <com.pkmmte.view.CircularImageView
                android:id="@+id/photo"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:cursorVisible="false"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="College"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/clg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="College"
                    android:inputType="textPhonetic"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="textPhonetic"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/md_grey_400"
                android:text="Save"
                android:textColor="#eee"/>


        </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>