<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003f87">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin">


    <com.pkmmte.view.CircularImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/iview"
        android:adjustViewBounds="true"
        android:layout_marginLeft="140dp"
        app:border="true"
        android:src="@drawable/user"
        app:border_color="#EEEEEE"
        app:border_width="1dp"
        app:shadow="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/iview"
        android:layout_marginTop="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:src="@drawable/account"/>
        <View
            android:layout_width="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:layout_height="match_parent"
            android:background="#fff"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:shadowColor="#ffffff"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:src="@drawable/mail"/>
            <View
                android:layout_width="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:background="#fff"/>

            <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                android:shadowColor="#ffffff"
                android:textColor="#ffffff"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff"
            android:shadowColor="#ffffff"
            android:textColor="#ffffff"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:src="@drawable/lock"/>
            <View
                android:layout_width="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:background="#fff"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="#ffffff"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:errorEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#ffffff"
            android:shadowColor="#ffffff"
            android:textColor="#ffffff"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:src="@drawable/lock"/>
            <View
                android:layout_width="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:background="#fff"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="#ffffff"
                android:shadowColor="#ffffff"
                android:textColor="#ffffff"
                app:errorEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColorHint="#ffffff"
                    android:shadowColor="#ffffff"
                    android:textColor="#ffffff"
                    android:maxLines="1"

                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:src="@drawable/clgb"/>
            <View
                android:layout_width="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:background="#fff"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/clg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                android:textColorHint="#ffffff"
                android:shadowColor="#ffffff"
                android:textColor="#ffffff"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="College"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#ffffff"
                    android:shadowColor="#ffffff"
                    android:textColor="#ffffff"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:src="@drawable/phn"/>
            <View
                android:layout_width="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:background="#fff"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:textColorHint="#ffffff"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="textEmailAddress"
        android:textColorHint="#ffffff"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        android:maxLines="1"
        />
   </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cornerbutton"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        />
        </LinearLayout>
</RelativeLayout>
</ScrollView>